--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /*  family=Strój:wght@400;700&
 
 COLORS
@@ -9,13 +8,12 @@ COLORS
 - Dark blue: hsl(218, 44%, 22%)
 */
 
-*
-{
+* {
     box-sizing: border-box;
-    
+
 }
 
-body{
+body {
     margin: 0;
     padding: 0;
     background-color: hsl(212, 45%, 89%);
@@ -24,20 +22,20 @@ body{
     width: 100%;
     min-height: 100vh;
 }
-.img1{
+
+.img1 {
     display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: center;
-	align-items: center;
-	align-content: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
     border-radius: 1.2rem;
-    
+
 
 }
 
-main
-{   
+main {
     margin: 0;
     padding: 0;
     display: flex;
@@ -45,26 +43,30 @@ main
     justify-content: center;
     min-height: 100vh;
 }
-.qr{
-    box-shadow:0 0 10px rgb(173, 173, 173);
+
+.qr {
+    box-shadow: 0 0 10px rgb(173, 173, 173);
     background-color: white;
     height: fit-content;
     border-radius: 0.7rem;
     padding: 1rem;
     text-align: center;
 }
-.qr img{
+
+.qr img {
     width: 200px;
     height: 200px;
 }
-main p{
+
+main p {
     padding: 0 0.6rem 0 0.6rem;
     color: hsl(218, 44%, 22%);
     font-weight: bold;
     max-width: 200px;
     font-family: 'Outfit', sans-serif;
 }
-main .a{
+
+main .a {
     padding: 0 0.6rem 0 0.6rem;
     font-weight: normal;
     font-size: 13px;
